<resources>
    <!-- All comments are notes to translators. -->
    <string name="app_name">LocaleText</string>

    <!-- The Help option in the options menu, no more than 30 chars. -->
    <string name="action_help">Help</string>

    <!-- The description includes a parenthetical expression.  -->
    <string name="description">Nougat is a family of confections made with sugar or honey, roasted nuts (almonds, walnuts, pistachios, hazelnuts, and macadamia nuts are common), whipped egg whites, and sometimes chopped candied fruit. It is used in a variety of candy bars and chocolates. </string>

    <!-- The product name includes "Package" to define a pack.  -->
    <string name="nougat">Nougat Candy Package</string>

    <!-- Do not translate.  -->
    <string name="support_phone" translatable="false">14155551212</string>

    <!-- Support Department should be capitalized.  -->
    <string name="help_text">If you need help, contact our Support Department.</string>

    <!-- Do not translate.  -->
    <string name="dial_log_message" translatable="false">Can\'t resolve app for ACTION_DIAL Intent.</string>

    <!-- The Language option in the options menu.  -->
    <string name="language">Language</string>

    <!-- The expiration date for the package, includes a colon.  -->
    <string name="expiration_date">Expiration Date:</string>

    <!-- Do not translate.  -->
    <string name="date" translatable="false">01/01/2017</string>

    <!-- The quantity to be entered, includes a colon.  -->
    <string name="quantity_label">Quantity:</string>

    <!-- The hint that tells the user to enter a number.  -->
    <string name="enter_a_number">Enter a number</string>

    <!-- The price for the package, includes a colon.  -->
    <string name="price_label">Price per package:</string>

    <!-- The total amount to pay for the package, includes a colon.  -->
    <string name="total_to_pay">Total to pay:</string>

    <!-- The exchange rate based on $1.00 U.S. dollars.  -->
    <string name="enter_number">Enter a number</string>
</resources>
